--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "bunyan": "^1.8.12",
     "nconf": "^0.8.4",
+    "route-parser": "0.0.5",
     "sockhop": "^1.3.2",
+    "uuid": "^3.1.0",
     "victor": "^1.1.0"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "concurrently": "^3.5.0",
     "jsdoc-to-markdown": "^3.0.0",
     "jshint": "^2.9.5",
